# plg

./: .env.cmake  CMakeLists.txt  README.md
src/: Character.hpp  MapGenerator.cpp  MapGenerator.hpp  Terrain.cpp  Terrain.hpp  TerrainChunk.hpp  defines.hpp  global.cpp  global.hpp  gui.cpp  gui.hpp  imgui.ini  main.cpp  noise.cpp  noise.hpp  pch.hpp
src/colormaps/: inferno.hpp  jet.hpp
src/engine/: Camera.cpp  Camera.hpp  Character.cpp  Character.hpp  InputsHandler.cpp  InputsHandler.hpp  Light.hpp  Moveable.cpp  Moveable.hpp  gui.cpp  gui.hpp
src/engine/gl/: Shader.cpp  Shader.hpp  UBO.hpp
src/engine/gl/mesh/: EBO.hpp  Mesh.cpp  Mesh.hpp  meshes.cpp  meshes.hpp
src/engine/gl/shaders/: colorPC.vert  environment.frag  environment.vert  light.frag  light.vert  main.frag  main.geom  main.tesc  main.tese  main.vert
src/engine/gl/texture/: Texture.cpp  Texture.hpp  image2D.cpp  image2D.hpp
src/engine/terrain/: MapGenerator.cpp  MapGenerator.hpp  Terrain.cpp  Terrain.hpp  TerrainChunk.hpp  TerrainLayer.hpp
src/gl/: Camera.cpp  Camera.hpp  InputsHandler.cpp  InputsHandler.hpp  PBO.hpp  Shader.cpp  Shader.hpp
src/gl/mesh/: EBO.hpp  Mesh.cpp  Mesh.hpp  Transformable.cpp  Transformable.hpp  VAO.hpp  VBO.hpp  meshes.cpp  meshes.hpp
src/gl/shaders/: falloff.comp  main.frag  main.tesc  main.tese  main.vert  noise2d.comp  terrain.comp  v4_color.frag  v4_color.vert
src/gl/texture/: Texture.cpp  Texture.hpp  TextureDescriptor.hpp  image2D.cpp  image2D.hpp
src/res/data/layers/seb/: 0.json  backup.json
src/res/regions/: 0.csv  old.csv
